<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout_gray"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar_default" />

    <!-- 提示文字 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_12dp"
        android:background="@color/background_layout_gray"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:drawableRight="@mipmap/ic_cellphone"
                android:text="@string/identity_tips_text_part1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/identity_tips_text_part2" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identity_tips_text_part3" />
    </LinearLayout>

    <!-- 真实姓名 -->
    <com.hhly.lawyer.widget.ArrowItemView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_setting_item_view"
        android:background="@drawable/btn_conners_clickable"
        android:clickable="true"
        app:arrow_content_hint_text="@string/identity_hint_username"
        app:arrow_content_text="@string/identity_username" />

    <!-- 性别 -->
    <com.hhly.lawyer.widget.ArrowItemView
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_setting_item_view"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/btn_conners_clickable"
        android:clickable="true"
        app:arrow_content_hint_text="@string/identity_hint_sex"
        app:arrow_content_text="@string/identity_sex" />

    <!-- 执行证号 -->
    <com.hhly.lawyer.widget.ArrowItemView
        android:id="@+id/professionId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_setting_item_view"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/btn_conners_clickable"
        android:clickable="true"
        app:arrow_content_hint_text="@string/identity_hint_id"
        app:arrow_content_text="@string/identity_profession_id" />

    <!-- 职业时长 -->
    <com.hhly.lawyer.widget.ArrowItemView
        android:id="@+id/professionTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_setting_item_view"
        android:background="@drawable/btn_conners_clickable"
        android:clickable="true"
        app:arrow_content_hint_text="@string/identity_hint_time"
        app:arrow_content_text="@string/identity_profession_time" />

    <!-- 律师名称 -->
    <com.hhly.lawyer.widget.ArrowItemView
        android:id="@+id/lawyerUsername"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_setting_item_view"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/btn_conners_clickable"
        android:clickable="true"
        app:arrow_content_hint_text="@string/identity_hint_lawyer_username"
        app:arrow_content_text="@string/identity_lawyer_username" />

    <!-- 律师地址 -->
    <com.hhly.lawyer.widget.ArrowItemView
        android:id="@+id/lawyerAdress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_setting_item_view"
        android:background="@drawable/btn_conners_clickable"
        android:clickable="true"
        app:arrow_content_hint_text="@string/identity_hint_adress"
        app:arrow_content_text="@string/identity_lawyer_adress" />

    <!-- 我擅长的案件 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_conners_clickable"
        android:clickable="true"></LinearLayout>

    <Button
        android:id="@+id/nextStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/btn_conners_clickable"
        android:clickable="true"
        android:text="@string/next_step"
        android:textColor="@color/design_black_bold"
        android:textSize="@dimen/text_size_18" />

</LinearLayout>